# mlcontainers

./: LICENSE  README.md
jax-conda/: jax-conda-nlp.Dockerfile
jax-conda/.devcontainer/: devcontainer.json
jax-nlp-conda/: env.yml  jax-conda-nlp.Dockerfile
jax-nlp-conda/.devcontainer/: devcontainer.json
jax-uv/: devcontainer.Dockerfile  pyproject.toml
jax-uv/.devcontainer/: devcontainer.json
pytorch-nlp-conda/: env.yml  pt-conda-nlp.Dockerfile
pytorch-nlp-conda/.devcontainer/: devcontainer.json
torch-conda/: env.yml
torch-conda/.devcontainer/: devcontainer.json
torch-uv/: pyproject.toml
torch-uv/.devcontainer/: devcontainer.json
