[project]
name = "jax-uv"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "autopep8>=2.3.2",
    "einops>=0.8.1",
    "flax>=0.10.4",
    "ipython>=9.0.1",
    "jax[cuda12]==0.5.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab>=4.3.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "orbax>=0.1.9",
    "pandas>=2.2.3",
    "vl-convert-python>=1.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
